cmake_minimum_required(VERSION 3.11.3)

set(CMAKE_CXX_STANDARD 17)
set (CMAKE_BUILD_TYPE "Debug") #to be able to reading binary symbols in ubuntu, source: https://dominoc925.blogspot.com/2015/12/no-debugging-symbols-found-in-gdb-after.html 

project(graphs)

find_package(wxWidgets REQUIRED COMPONENTS core base)
include(${wxWidgets_USE_FILE})

file(GLOB project_SRCS src/*.cpp)


add_executable(graphs ${project_SRCS})
target_link_libraries(graphs ${wxWidgets_LIBRARIES})
target_include_directories(graphs PRIVATE ${wxWidgets_INCLUDE_DIRS})
